frontend: Fix mobile view of Login/register page. Also fixes content-overflow causing scrollable pages. fix #73

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -22,6 +22,14 @@ $navbar-color: #555;
     }
   }
 
+.footer {
+  background-color: $navbar-color;
+}
+
+.footer a {
+  color: #ffff;
+}
+
 .navbar-extend {
     background-color: $navbar-color;
 }
